// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ThirdPartyLookupFormResult renders api data 1`] = `
<StandardCard
  title="Incites"
>
  <p>
    UTs
     - 
    dummy UT
  </p>
  <StandardCard
    title="Results"
  >
    <pre>
      [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
    </pre>
  </StandardCard>
  <WithStyles(Button)
    color="primary"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 20,
      }
    }
    variant="contained"
  >
    New Search
  </WithStyles(Button)>
</StandardCard>
`;

exports[`Component ThirdPartyLookupFormResult renders api data when no second field provided 1`] = `
<StandardCard
  title="Incites"
>
  <p>
    UTs
     - 
    dummy UT
  </p>
  <StandardCard
    title="Results"
  >
    <pre>
      [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
    </pre>
  </StandardCard>
  <WithStyles(Button)
    color="primary"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 20,
      }
    }
    variant="contained"
  >
    New Search
  </WithStyles(Button)>
</StandardCard>
`;

exports[`Component ThirdPartyLookupFormResult should display the secondary field when required 1`] = `
<StandardCard
  title="Incites"
>
  <p>
    UTs
     - 
    dummy UT
  </p>
  <p>
    API Key
     - 
    123456789
  </p>
  <StandardCard
    title="Results"
  >
    <pre>
      [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
    </pre>
  </StandardCard>
  <WithStyles(Button)
    color="primary"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 20,
      }
    }
    variant="contained"
  >
    New Search
  </WithStyles(Button)>
</StandardCard>
`;

exports[`Component ThirdPartyLookupFormResult should not display the secondary field if reportInOutput is not specifically turned on 1`] = `
<StandardCard
  title="Incites"
>
  <p>
    UTs
     - 
    dummy UT
  </p>
  <StandardCard
    title="Results"
  >
    <pre>
      [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
    </pre>
  </StandardCard>
  <WithStyles(Button)
    color="primary"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 20,
      }
    }
    variant="contained"
  >
    New Search
  </WithStyles(Button)>
</StandardCard>
`;
